fix bug for run on android 12

--- a/jitsi_meet/android/src/main/AndroidManifest.xml
+++ b/jitsi_meet/android/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
             android:launchMode="singleTask"
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/Theme.AppCompat.Light"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true">
         </activity>
     </application>
 </manifest>
