--- a/jitsi_meet/android/build.gradle
+++ b/jitsi_meet/android/build.gradle
@@ -5,11 +5,11 @@ buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -21,6 +21,8 @@ rootProject.allprojects {
         }
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://www.jitpack.io' }
     }
 }
 
@@ -30,14 +32,23 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 31
 
+    // Required by jitsi
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
     defaultConfig {
+        // Required by jitsi
         minSdkVersion 23
-    }
-    lintOptions {
-        disable 'InvalidPackage'
     }
 
     compileOptions {
@@ -48,7 +59,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-    // Jitsi Meet from https://github.com/jitsi/jitsi-maven-repository/tree/master/releases/org/jitsi/react/jitsi-meet-sdk
-    implementation ('org.jitsi.react:jitsi-meet-sdk:3.3.0') { transitive = true }
+    // From: https://github.com/jitsi/jitsi-maven-repository/tree/master/releases/org/jitsi/react/jitsi-meet-sdk
+    implementation ('org.jitsi.react:jitsi-meet-sdk:5.0.2') { transitive = true }
 }
