--- a/jitsi_meet/pubspec.yaml
+++ b/jitsi_meet/pubspec.yaml
@@ -1,7 +1,7 @@
 name: jitsi_meet
 description: Jitsi Meet Plugin - A plugin for integrating open source Jitsi Meet API in flutter. Jitsi Meet is secure, fully featured and allows completely free video conferencing made with https://jitsi.org, a collection of open source projects
-version: 4.0.0
-homepage: https://github.com/gunschu/jitsi_meet
+version: 4.0.1
+homepage: https://github.com/semimob/jitsi_meet
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -10,8 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  jitsi_meet_platform_interface: ^2.0.0
-  jitsi_meet_web_plugin: ^2.0.0
+  jitsi_meet_platform_interface:
+    path: ../jitsi_meet_platform_interface
+  jitsi_meet_web_plugin:
+    path: ../jitsi_meet_web_plugin
 
 dev_dependencies:
   flutter_test:
@@ -29,7 +31,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: com.gunschu.jitsi_meet
+        package: com.semimob.jitsi_meet
         pluginClass: JitsiMeetPlugin
       ios:
         pluginClass: JitsiMeetPlugin
