--- a/jitsi_meet_platform_interface/pubspec.yaml
+++ b/jitsi_meet_platform_interface/pubspec.yaml
@@ -1,16 +1,15 @@
 name: jitsi_meet_platform_interface
 description: A common platform interface for the jitsi meet plugin.
 version: 2.0.0
-homepage: https://github.com/gunschu/jitsi_meet
+homepage: https://github.com/semimob/jitsi_meet
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: ">=2.18.5 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.0.0
+  plugin_platform_interface: ^2.1.4
 
 dev_dependencies:
   flutter_test:
