--- a/jitsi_meet_web_plugin/pubspec.yaml
+++ b/jitsi_meet_web_plugin/pubspec.yaml
@@ -1,25 +1,29 @@
 name: jitsi_meet_web_plugin
 description: Jitsi Meet Web Plugin
 version: 2.0.0
-homepage: https://github.com/gunschu/jitsi_meet
+homepage: https://github.com/semimob/jitsi_meet
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: ">=2.18.5 <4.0.0"
   
 dependencies:
   flutter:
     sdk: flutter
-  js: ^0.6.3
-  meta: ^1.3.0
+
+  plugin_platform_interface: ^2.1.4
+  jitsi_meet_platform_interface:
+    path: ../jitsi_meet_platform_interface
+
   flutter_web_plugins:
     sdk: flutter
-  jitsi_meet_platform_interface: ^2.0.0
+  js: ^0.6.4
+  meta: ^1.8.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.11.0
+  flutter_lints: ^2.0.1
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
