--- a/jitsi_meet_web_plugin/pubspec.yaml
+++ b/jitsi_meet_web_plugin/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
     sdk: flutter
 
   plugin_platform_interface: ^2.1.4
-  jitsi_meet_platform_interface:
-    path: ../jitsi_meet_platform_interface
+  jitsi_meet_platform_interface: ^2.0.0
 
   flutter_web_plugins:
     sdk: flutter
