--- a/jitsi_meet/pubspec.yaml
+++ b/jitsi_meet/pubspec.yaml
@@ -10,8 +10,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  jitsi_meet_platform_interface: ^2.0.0
-  jitsi_meet_web_plugin: ^2.0.0
+  jitsi_meet_platform_interface:
+    git:
+      url: https://github.com/semimob/jitsi_meet
+      ref: linh-dev
+      path: jitsi_meet_platform_interface
+  jitsi_meet_web_plugin:
+    git:
+      url: https://github.com/semimob/jitsi_meet
+      ref: linh-dev
+      path: jitsi_meet_web_plugin
 
 dev_dependencies:
   flutter_test:
